--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,51 @@
     <title>Title</title>
 </head>
 <body>
+<script src="index.ts"></script>
 
+<script>
+const {
+          Client,
+          AuthorizationMiddleware,
+          ResultDataMiddleware,
+          ETagMiddleware
+      } = window.streams_api;
+console.log('Client', Client);
+const client = new Client({
+    baseURL: 'http://streams-dev.local/api'
+});
+client.use(new ResultDataMiddleware());
+client.use(new AuthorizationMiddleware({
+    type : 'bearer',
+    token: 'asdfsdf'
+}));
+client.use(new ETagMiddleware());
+
+console.log('client', client);
+
+
+let streams;
+client.streams.get().then(response => {
+    streams = response.data;
+    console.log('response', response);
+    console.log('streams', streams);
+    return Promise.all(streams.data.map(stream => client.streams.find(stream.id)))
+}).then(responses => {
+    console.log('responses', responses);
+});
+</script>
+<!--
 <script type="module">
 (async () => {
-    const {Client} = await import('./index.js');
+    const {Client} = await import('./index');
 
     console.log('Client', Client);
-    const client = new Client({});
+    const client = new Client({
+        baseURL: 'http://streams-dev.local/api'
+    });
     console.log('client', client);
 })();
 </script>
+-->
 </body>
 </html>
