updated to match latest

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script src="index.ts"></script>
+<script src="index.ts" type="module"></script>
 
 <script>
 const {
